# agentrouter-python

./: .gitignore  README.md  pyproject.toml
agentrouter/: __init__.py  _constants.py  _exceptions.py  _transport.py
examples/: async_example.py  basic_chat.py  streaming.py
tests/: live_test.py  test_client.py
