[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentrouter"
version = "0.2.0"
description = "Python SDK for the AgentRouter API — streaming-first OpenAI-compatible LLM gateway."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agentrouter", "llm", "openai", "deepseek", "ai", "sdk", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/agentrouter-python"
Repository = "https://github.com/YOUR_USERNAME/agentrouter-python"
Issues = "https://github.com/YOUR_USERNAME/agentrouter-python/issues"

[tool.setuptools.packages.find]
include = ["agentrouter*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
